feat: implement complete REST API with full CRUD operations
- Add all router implementations for companies, sessions, messages, FAQs, and summaries
- Implement comprehensive error handling middleware
- Fix TypeScript configuration and import paths
- Add type safety with proper parameter validation
- Test and verify all API endpoints are functional
- Support for PostgreSQL database operations via Prisma

--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -52,5 +52,7 @@
   // ✅ Added: ensure ts-node runs ESM properly
   "ts-node": {
     "esm": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "prisma"]
 }
