--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,7 +23,9 @@
     "morgan": "^1.10.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.7.2",
     "nodemon": "^3.1.10",
     "prisma": "^6.17.1",
