feat(api): implement Phase 2 CRUD under /api/v1 with contract-compliant routes •  Companies: POST and GET by id (plus full CRUD) •  FAQs: POST/GET list/PUT/DELETE scoped by company •  Sessions: POST/GET list/GET one/PATCH status or escalationReason •  Messages: GET/POST with mock bot response (no LLM yet) •  Wire routes in server and add error handling middleware

--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -12,7 +12,7 @@
 
     // For nodejs:
     "lib": ["esnext"],               // ✅ uncommented for Node ESM env
-    "types": ["node"],               // ✅ uncommented for Node ESM env
+    "types": ["node" , "jest"],               // ✅ uncommented for Node ESM env
     // and npm install -D @types/node
 
     // Module Resolution (added for ESM imports)
@@ -53,6 +53,6 @@
   "ts-node": {
     "esm": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*","tests", "**/*.test.ts"],
   "exclude": ["node_modules", "dist", "prisma"]
 }
