--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -9,9 +9,9 @@
     }
   ],
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["Frontend/src/*"]
+      "@/*": ["*"]
     }
   }
 }
