--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -7,6 +7,10 @@ NODE_ENV=development
 
 # AI Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
+LLM_PROVIDER=gemini  # Options: gemini, mock
+
+# Phase 9: Structured Output
+USE_STRUCTURED_OUTPUT=true  # Enable structured JSON responses with sections and metadata
 
 # Phase 7: Adaptive Confidence Thresholds
 # Strong confidence - bot answers directly without hedging
