feat(ui): update dependencies and add custom fonts to enhance UI

--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -9,6 +9,8 @@
     }
   ],
   "compilerOptions": {
+    "types": ["node"],
+    "jsx": "react-jsx",
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
