--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -6,18 +6,18 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    // "module": "esnext",            // ✅ keep as ESNext (for ESM)
+    // "module": "esnext",            //  keep as ESNext (for ESM)
     "module": "ESNext",              // same as your line, case-normalized
     "target": "ES2020",
 
     // For nodejs:
-    "lib": ["esnext"],               // ✅ uncommented for Node ESM env
-    "types": ["node" , "jest"],               // ✅ uncommented for Node ESM env
+    "lib": ["esnext"],               //  uncommented for Node ESM env
+    "types": ["node" , "jest"],               //  uncommented for Node ESM env
     // and npm install -D @types/node
 
     // Module Resolution (added for ESM imports)
-    "moduleResolution": "Bundler",   // ✅ helps resolve .ts/.js imports cleanly
-    "resolveJsonModule": true,       // ✅ allows importing JSON if needed
+    "moduleResolution": "Bundler",   //  helps resolve .ts/.js imports cleanly
+    "resolveJsonModule": true,       //  allows importing JSON if needed
     /*  enable direct .ts imports */
     "allowImportingTsExtensions": true,
     "noEmit": true,    
@@ -49,7 +49,7 @@
     "moduleDetection": "force",
     "skipLibCheck": true,
   },
-  // ✅ Added: ensure ts-node runs ESM properly
+  //  Added: ensure ts-node runs ESM properly
   "ts-node": {
     "esm": true
   },
